--- a/android-specific/AndroidManifest.xml
+++ b/android-specific/AndroidManifest.xml
@@ -29,6 +29,11 @@
         </activity>
 
     </application>
+    
     <uses-sdk android:minSdkVersion="3" />
+    
+    <!--  for Flurry -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    
 
 </manifest> 
