--- a/game-core/.classpath
+++ b/game-core/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/gdx.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl-natives.jar"/>
 	<classpathentry kind="lib" path="libs/gdx-backend-lwjgl.jar"/>
+	<classpathentry kind="lib" path="libs/FlurryAgent.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
