--- a/android-specific/AndroidManifest.xml
+++ b/android-specific/AndroidManifest.xml
@@ -15,7 +15,7 @@
   limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.badlogic.gdx"
+      package="com.deengames.findtheharf"
       android:versionCode="1"
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
@@ -34,6 +34,5 @@
     
     <!--  for Flurry -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />    
 
 </manifest> 
